--- a/.github/workflows/bolt.yml
+++ b/.github/workflows/bolt.yml
@@ -33,6 +33,7 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: pages deploy ./build/client --project-name=bolt-diy
+          packageManager: bun
           secrets: |
             OPENAI_LIKE_API_BASE_URL
             OPENAI_LIKE_API_KEY
