--- a/.github/workflows/bolt.yml
+++ b/.github/workflows/bolt.yml
@@ -31,7 +31,10 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: pages deploy ./build/client --project-name=bolt-diy
           packageManager: bun
-      - run: bunx wrangler pages secret bulk
+      - run: bunx wrangler pages secret bulk --project-name=bolt-diy
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
   keepalive-job:
     name: Keepalive Workflow
