--- a/.github/workflows/bolt.yml
+++ b/.github/workflows/bolt.yml
@@ -11,7 +11,6 @@ on:
 
 env:
   OPENAI_LIKE_API_BASE_URL: ${{ secrets.OPENAI_LIKE_API_BASE_URL }}
-  OPENAI_LIKE_API_KEY: ${{ secrets.OPENAI_LIKE_API_KEY }}
 
 jobs:
   deploy:
@@ -31,10 +30,8 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: pages deploy ./build/client --project-name=bolt-diy
           packageManager: bun
-          postCommands: |
-            wrangler pages secret put OPENAI_LIKE_API_BASE_URL ${{ secrets.OPENAI_LIKE_API_BASE_URL }}
-            wrangler pages secret put OPENAI_LIKE_API_KEY ${{ secrets.OPENAI_LIKE_API_KEY }}
-
+          quiet: true
+          
   keepalive-job:
     name: Keepalive Workflow
     runs-on: ubuntu-latest
