--- a/.github/workflows/bolt.yml
+++ b/.github/workflows/bolt.yml
@@ -9,9 +9,6 @@ on:
   schedule:
   - cron: "0 * * * *"
 
-env:
-  OPENAI_LIKE_API_BASE_URL: ${{ secrets.OPENAI_LIKE_API_BASE_URL }}
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -22,9 +19,8 @@ jobs:
           repository: "stackblitz-labs/bolt.diy"
       - uses: oven-sh/setup-bun@v2
       - run: bun install
-      - name: Replace API URL
-        run: |
-          sed -i 's|api.x.ai|'"${{ secrets.AI_API }}/xai"'|g' app/lib/modules/llm/providers/xai.ts
+      - name: Create .env file
+        run: echo "${{ secrets.ENV_FILE }}" > .env
       - run: bun run build
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
